// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <h3
      className="settings-definition-name"
    >
      email_configuration.test.title
    </h3>
  </div>
  <form
    className="settings-definition-right"
    onSubmit={[Function]}
  >
    <MandatoryFieldsExplanation
      className="form-field"
    />
    <div
      className="form-field"
    >
      <label
        htmlFor="test-email-to"
      >
        email_configuration.test.to_address
        <MandatoryFieldMarker />
      </label>
      <input
        className="settings-large-input"
        disabled={false}
        id="test-email-to"
        onChange={[Function]}
        required={true}
        type="email"
        value="luke@skywalker.biz"
      />
    </div>
    <div
      className="form-field"
    >
      <label
        htmlFor="test-email-subject"
      >
        email_configuration.test.subject
      </label>
      <input
        className="settings-large-input"
        disabled={false}
        id="test-email-subject"
        onChange={[Function]}
        type="text"
        value="email_configuration.test.subject"
      />
    </div>
    <div
      className="form-field"
    >
      <label
        htmlFor="test-email-message"
      >
        email_configuration.test.message
        <MandatoryFieldMarker />
      </label>
      <textarea
        className="settings-large-input"
        disabled={false}
        id="test-email-message"
        onChange={[Function]}
        required={true}
        rows={5}
        value="email_configuration.test.message_text"
      />
    </div>
    <SubmitButton
      disabled={false}
    >
      email_configuration.test.send
    </SubmitButton>
  </form>
</div>
`;

exports[`should render correctly: error 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <h3
      className="settings-definition-name"
    >
      email_configuration.test.title
    </h3>
  </div>
  <form
    className="settings-definition-right"
    onSubmit={[Function]}
  >
    <div
      className="form-field"
    >
      <Alert
        variant="error"
      >
        Some error message
      </Alert>
    </div>
    <MandatoryFieldsExplanation
      className="form-field"
    />
    <div
      className="form-field"
    >
      <label
        htmlFor="test-email-to"
      >
        email_configuration.test.to_address
        <MandatoryFieldMarker />
      </label>
      <input
        className="settings-large-input"
        disabled={false}
        id="test-email-to"
        onChange={[Function]}
        required={true}
        type="email"
        value="luke@skywalker.biz"
      />
    </div>
    <div
      className="form-field"
    >
      <label
        htmlFor="test-email-subject"
      >
        email_configuration.test.subject
      </label>
      <input
        className="settings-large-input"
        disabled={false}
        id="test-email-subject"
        onChange={[Function]}
        type="text"
        value="email_configuration.test.subject"
      />
    </div>
    <div
      className="form-field"
    >
      <label
        htmlFor="test-email-message"
      >
        email_configuration.test.message
        <MandatoryFieldMarker />
      </label>
      <textarea
        className="settings-large-input"
        disabled={false}
        id="test-email-message"
        onChange={[Function]}
        required={true}
        rows={5}
        value="email_configuration.test.message_text"
      />
    </div>
    <SubmitButton
      disabled={false}
    >
      email_configuration.test.send
    </SubmitButton>
  </form>
</div>
`;

exports[`should render correctly: sending 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <h3
      className="settings-definition-name"
    >
      email_configuration.test.title
    </h3>
  </div>
  <form
    className="settings-definition-right"
    onSubmit={[Function]}
  >
    <MandatoryFieldsExplanation
      className="form-field"
    />
    <div
      className="form-field"
    >
      <label
        htmlFor="test-email-to"
      >
        email_configuration.test.to_address
        <MandatoryFieldMarker />
      </label>
      <input
        className="settings-large-input"
        disabled={true}
        id="test-email-to"
        onChange={[Function]}
        required={true}
        type="email"
        value="luke@skywalker.biz"
      />
    </div>
    <div
      className="form-field"
    >
      <label
        htmlFor="test-email-subject"
      >
        email_configuration.test.subject
      </label>
      <input
        className="settings-large-input"
        disabled={true}
        id="test-email-subject"
        onChange={[Function]}
        type="text"
        value="email_configuration.test.subject"
      />
    </div>
    <div
      className="form-field"
    >
      <label
        htmlFor="test-email-message"
      >
        email_configuration.test.message
        <MandatoryFieldMarker />
      </label>
      <textarea
        className="settings-large-input"
        disabled={true}
        id="test-email-message"
        onChange={[Function]}
        required={true}
        rows={5}
        value="email_configuration.test.message_text"
      />
    </div>
    <SubmitButton
      disabled={true}
    >
      email_configuration.test.send
    </SubmitButton>
    <DeferredSpinner
      className="spacer-left"
    />
  </form>
</div>
`;

exports[`should render correctly: success 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <h3
      className="settings-definition-name"
    >
      email_configuration.test.title
    </h3>
  </div>
  <form
    className="settings-definition-right"
    onSubmit={[Function]}
  >
    <div
      className="form-field"
    >
      <Alert
        variant="success"
      >
        email_configuration.test.email_was_sent_to_x.email@example.com
      </Alert>
    </div>
    <MandatoryFieldsExplanation
      className="form-field"
    />
    <div
      className="form-field"
    >
      <label
        htmlFor="test-email-to"
      >
        email_configuration.test.to_address
        <MandatoryFieldMarker />
      </label>
      <input
        className="settings-large-input"
        disabled={false}
        id="test-email-to"
        onChange={[Function]}
        required={true}
        type="email"
        value="luke@skywalker.biz"
      />
    </div>
    <div
      className="form-field"
    >
      <label
        htmlFor="test-email-subject"
      >
        email_configuration.test.subject
      </label>
      <input
        className="settings-large-input"
        disabled={false}
        id="test-email-subject"
        onChange={[Function]}
        type="text"
        value="email_configuration.test.subject"
      />
    </div>
    <div
      className="form-field"
    >
      <label
        htmlFor="test-email-message"
      >
        email_configuration.test.message
        <MandatoryFieldMarker />
      </label>
      <textarea
        className="settings-large-input"
        disabled={false}
        id="test-email-message"
        onChange={[Function]}
        required={true}
        rows={5}
        value="email_configuration.test.message_text"
      />
    </div>
    <SubmitButton
      disabled={false}
    >
      email_configuration.test.send
    </SubmitButton>
  </form>
</div>
`;
